# wt-starter-simplifyed

./: .gitignore  CMakeLists.txt  README.md  dbo.db  wt_config.xml
app-base/: CMakeLists.txt  dbo.db
app-base/src/001-App/: App.cpp  App.h
app-base/src/002-Dbo/: Session.cpp  Tables.h
app-stylus/: CMakeLists.txt  dbo.db
app-stylus/base-templates/app-cv/: svg.xml  texts-en.xml  ui.xml
app-stylus/base-templates/default/: texts-en.xml  ui.xml
app-stylus/src/001-App/: App.cpp  App.h
app-stylus/src/002-Dbo/: Session.cpp  Tables.h
app-stylus/src/003-Preview/: ElemNode.cpp  ElemNode.h  Preview.cpp  Preview.h  TreeNode.cpp  TreeNode.h
app-stylus/src/003-TreePreview/: PTree.cpp  TreePreview.cpp
app-stylus/src/004-TempPreview/: PNode.cpp  PNode.h  TempPreview.cpp
app-stylus/src/005-ClassesEdditor/: ClassesEdditor.cpp  ClassesEdditor.h
app-stylus/src/101-Stylus/: Stylus.cpp  Stylus.h  XMLBrain.cpp  XMLBrain.h
app-stylus/src/101-Stylus/PanelDialogs/: BaseDialogPanel.cpp  BaseDialogPanel.h  EdditorPanel.cpp  EdditorPanel.h  LeftPanel.cpp  LeftPanel.h  QuickCommandsPanel.cpp  RightPanel.cpp  RightPanel.h  SettingsPanel.cpp
app-stylus/src/101-Stylus/Tailwind/: TailwindConfig.cpp
app-stylus/static/css/: questionmark.css  tailwind-out.css
app-stylus/tailwind/: package.json  tailwind-in.css  tailwind.config.js
app-stylus/tailwind/css/: button-classes.css  gradients.css
base-templates/default/: ui.xml
base-templates/test/: test-1.xml  test-2.xml
src/001-App/: App.cpp  App.h
src/002-Dbo/: Session.cpp  Session.h
src/003-TreePreview/: PTree.cpp  PTree.h  TreePreview.cpp  TreePreview.h
src/004-TempPreview/: PNode.cpp  PNode.h  TempPreview.cpp  TempPreview.h
src/005-ClassesEdditor/: ClassesEdditor.cpp  ClassesEdditor.h
src/100-Utils/tinyxml2/: tinyxml2.h
src/101-Stylus/: Stylus.cpp  Stylus.h  XMLBrain.cpp  XMLBrain.h
src/101-Stylus/PanelDialogs/: BaseDialogPanel.cpp  EdditorPanel.cpp  EdditorPanel.h  LeftPanel.cpp  LeftPanel.h  QuickCommandsPanel.h  RightPanel.cpp  SettingsPanel.cpp  SettingsPanel.h
src/101-Stylus/Tailwind/: TailwindConfig.h
static/css/: tailwind-out.css
tailwind/: package-lock.json  package.json  tailwind-in.css  tailwind.config.js
tailwind/css/: input-classes.css  scroll-bar.css
tailwind/local_plugins/tailwindcss-question-mark-double/: package.json
tailwind/local_plugins/tailwindcss-question-mark-double/src/: index.js
xml-templates/default/: texts-en.xml  ui.xml
xml-templates/stylus/: stylus-flex-and-grid-svgs.xml  tconf-Layout.xml  tconf-accesibility.xml  tconf-backgrounds.xml  tconf-borders.xml  tconf-effects.xml  tconf-filters.xml  tconf-flex-and-grid.xml  tconf-interactivity.xml  tconf-sizing.xml  tconf-spacing.xml  tconf-svg.xml  tconf-tables.xml  tconf-transform.xml  tconf-transition-and-animation.xml  tconf-typography.xml  tconf-variants.xml  test-1.xml  test-2.xml
xml-templates/test/: test-1.xml  test-2.xml
